@@ -7,8 +7,12 @@
 "KEYS","Keys","Options tab title."
 "OPTIONS_LIMIT","More trees","Options tab title."
 "SWAY_FACTOR","Tree movement limit","Options slider title"
-"HIDE_ON_LOAD","Hide trees under networks or buildings on load","Options panel toggle."
-"HIDE_ON_LOAD_TIP","When this is selected, trees under networks or buildings will be automatically hidden when the game loads.",,"Options panel tooltip."
+"LEAVE_ON_LOAD","Leave trees unchanged on load","Options panel toggle."
+"LEAVE_ON_LOAD_TIP","When this is selected, trees under networks or buildings will be automatically hidden when the game loads, except for those previously placed using anarchy.","Options panel tooltip."
+"HIDE_ON_LOAD","Hide all trees under networks or buildings on load","Options panel toggle."
+"HIDE_ON_LOAD_TIP","When this is selected, all trees under networks or buildings will be automatically hidden when the game loads, ignoring any previous state.","Options panel tooltip."
+"UNHIDE_ON_LOAD","Unhide all trees under networks or buildings on load","Options panel toggle."
+"UNHIDE_ON_LOAD_TIP","When this is selected, all trees under networks or buildings will be automatically made visible when the game loads, ignoring any previous state.","Options panel tooltip."
 "TERRAIN_UPDATE","Update tree elevation on terrain change","Checkbox in options panel."
 "TERRAIN_UPDATE_TIP","If this is selected, tree elevations will be changed to match terrain height when and where a terrain change takes place","Checkbox tooltip in options panel."
 "KEEP_ABOVEGROUND","Keep trees above ground","Checkbox in options panel."
